--- a/src/app/santia-listing/santia-listing.component.html
+++ b/src/app/santia-listing/santia-listing.component.html
@@ -1,6 +1,6 @@
 <div id="subjects">
   <div class="row">
-    <div *ngFor="let data of santaData" class="col-md-4">
+    <div *ngFor="let data of subjects" class="col-md-4">
       <app-santi-card [data]="data"></app-santi-card>
     </div>
   </div>
