Add Home to navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a href="#" class="navbar-brand">SantiAngular</a>
+      <a href="#" class="navbar-brand">SantiAngular</a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="https://broski.me"
+              >Go back home <span class="sr-only"></span></a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
-</nav>
-<div class="container">
+  </nav>
+  <div class="container">
     <app-santia-listing></app-santia-listing>
-</div>
+  </div>
   
